--- a/deployments/helms/identity-server-service-admin-ui-chart/secrets/appsettings.secrets.json
+++ b/deployments/helms/identity-server-service-admin-ui-chart/secrets/appsettings.secrets.json
@@ -1,2 +1,64 @@
 {
+  "ConnectionStrings:ConfigurationDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:PersistedGrantDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:IdentityDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:AdminLogDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:AdminAuditLogDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:DataProtectionDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "AdminConfiguration:PageTitle": "$(SERVICE_ADMINCONFIGURATION_PAGETITLE)",
+  "AdminConfiguration:FaviconUri": "~/favicon.ico",
+  "AdminConfiguration:IdentityAdminRedirectUri": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signin-oidc",
+  "AdminConfiguration:IdentityServerBaseUrl": "$(COMMON_IDENTITY_SERVER_STS_BASEURL)",
+  "AdminConfiguration:ClientId": "$(SERVICE_ADMINCONFIGURATION_CLIENTID)",
+  "AdminConfiguration:ClientSecret": "$(SERVICE_ADMINCONFIGURATION_CLIENTSECRET)",
+  "IdentityData:Users": [
+    {
+      "Username": "$(SERVICE_IDENTITYDATA_USERS_USERNAME)",
+      "Password": "$(SERVICE_IDENTITYDATA_USERS_PASSWORD)",
+      "Email": "$(SERVICE_IDENTITYDATA_USERS_EMAIL)",
+      "Roles": ["Administrator"],
+      "Claims": [
+        {
+          "Type": "name",
+          "Value": "admin"
+        }
+      ]
+    }
+  ],
+  "IdentityServerData:Clients": [
+    {
+      "ClientId": "$(SERVICE_ADMINCONFIGURATION_CLIENTID)",
+      "ClientName": "$(SERVICE_ADMINCONFIGURATION_CLIENTID)",
+      "ClientUri": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)",
+      "AllowedGrantTypes": ["authorization_code"],
+      "RequirePkce": true,
+      "ClientSecrets": [
+        {
+          "Value": "$(SERVICE_ADMINCONFIGURATION_CLIENTSECRET)"
+        }
+      ],
+      "RedirectUris": [
+        "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signin-oidc"
+      ],
+      "FrontChannelLogoutUri": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signout-oidc",
+      "PostLogoutRedirectUris": [
+        "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signout-callback-oidc"
+      ],
+      "AllowedCorsOrigins": ["$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)"],
+      "AllowedScopes": ["openid", "email", "profile", "roles"]
+    },
+    {
+      "ClientId": "microservices.identity_api_swaggerui",
+      "ClientName": "microservices.identity_api_swaggerui",
+      "AllowedGrantTypes": ["authorization_code"],
+      "RequireClientSecret": false,
+      "RequirePkce": true,
+      "RedirectUris": [
+        "$(COMMON_IDENTITY_SERVER_ADMIN_API_BASEURL)/swagger/oauth2-redirect.html"
+      ],
+      "AllowedScopes": ["microservices.identity_api"],
+      "AllowedCorsOrigins": ["$(COMMON_IDENTITY_SERVER_ADMIN_API_BASEURL)"]
+    }
+  ],
+  "Serilog:WriteTo:2:Args:ClientSecret": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)"
 }
