--- a/deployments/helms/identity-server-service-sts-chart/secrets/appsettings.secrets.json
+++ b/deployments/helms/identity-server-service-sts-chart/secrets/appsettings.secrets.json
@@ -1,2 +1,13 @@
 {
+  "ConnectionStrings:ConfigurationDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:PersistedGrantDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:IdentityDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:DataProtectionDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "ConnectionStrings:DefaultConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
+  "AdminCOnfiguration:PageTitle": "$(SERVICE_ADMINCONFIGURATION_PAGETITLE)",
+  "AdminCOnfiguration:HomePageLogoUri": "~/images/skoruba-icon.png",
+  "AdminCOnfiguration:FaviconUri": "~/favicon.ico",
+  "AdminCOnfiguration:Theme": null,
+  "AdminCOnfiguration:CustomThemeCss": null,
+  "AdminCOnfiguration:IdentityAdminBaseUrl": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)"
 }
