--- a/deployments/helms/overrides/identity-server-admin-api-values.yaml
+++ b/deployments/helms/overrides/identity-server-admin-api-values.yaml
@@ -13,7 +13,9 @@ imageCredentials:
 
 nameOverride: ""
 fullnameOverride: ""
-env: []
+env:
+  - name: ASPNETCORE_URLS
+    value: http://+:5000
 podAnnotations: {}
 
 podSecurityContext:
