--- a/deployments/helms/identity-server-admin-ui-chart/templates/deployment.yaml
+++ b/deployments/helms/identity-server-admin-ui-chart/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
           volumeMounts:
             - name: appsettings-secrets
@@ -49,7 +49,7 @@ spec:
               readOnly: true
           readinessProbe:
             httpGet:
-              path: /
+              path: /health
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
