--- a/services/src/IdentityServer.Admin.Api/Properties/launchSettings.json
+++ b/services/src/IdentityServer.Admin.Api/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:44302"
+      "applicationUrl": "https://localhost:44302",
     }
   }
 }
