--- a/deployments/helms/identity-server-sts-chart/secrets/appsettings.secrets.json
+++ b/deployments/helms/identity-server-sts-chart/secrets/appsettings.secrets.json
@@ -4,10 +4,10 @@
   "ConnectionStrings:IdentityDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
   "ConnectionStrings:DataProtectionDbConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
   "ConnectionStrings:DefaultConnection": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)",
-  "AdminCOnfiguration:PageTitle": "$(SERVICE_ADMINCONFIGURATION_PAGETITLE)",
-  "AdminCOnfiguration:HomePageLogoUri": "~/images/skoruba-icon.png",
-  "AdminCOnfiguration:FaviconUri": "~/favicon.ico",
-  "AdminCOnfiguration:Theme": null,
-  "AdminCOnfiguration:CustomThemeCss": null,
-  "AdminCOnfiguration:IdentityAdminBaseUrl": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)"
+  "AdminConfiguration:PageTitle": "$(SERVICE_ADMINCONFIGURATION_PAGETITLE)",
+  "AdminConfiguration:HomePageLogoUri": "~/images/skoruba-icon.png",
+  "AdminConfiguration:FaviconUri": "~/favicon.ico",
+  "AdminConfiguration:Theme": null,
+  "AdminConfiguration:CustomThemeCss": null,
+  "AdminConfiguration:IdentityAdminBaseUrl": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)"
 }
