--- a/services/src/IdentityServer.Admin.Api/appsettings.json
+++ b/services/src/IdentityServer.Admin.Api/appsettings.json
@@ -8,7 +8,7 @@
         "DataProtectionDbConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityServerAdmin;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "AdminApiConfiguration": {
-        "ApiName": "Doitsu Technology Ecommerce Identity Server Api",
+        "ApiName": "Doitsu Technology Ecommerce Identity Server Admin Api",
         "ApiVersion": "v1",
         "ApiBaseUrl": "https://localhost:44302",
         "IdentityServerBaseUrl": "https://localhost:44310",
