--- a/deployments/helms/identity-server-admin-ui-chart/secrets/appsettings.secrets.json
+++ b/deployments/helms/identity-server-admin-ui-chart/secrets/appsettings.secrets.json
@@ -11,54 +11,18 @@
   "AdminConfiguration:IdentityServerBaseUrl": "$(COMMON_IDENTITY_SERVER_STS_BASEURL)",
   "AdminConfiguration:ClientId": "$(SERVICE_ADMINCONFIGURATION_CLIENTID)",
   "AdminConfiguration:ClientSecret": "$(SERVICE_ADMINCONFIGURATION_CLIENTSECRET)",
-  "IdentityData:Users": [
-    {
-      "Username": "$(SERVICE_IDENTITYDATA_USERS_USERNAME)",
-      "Password": "$(SERVICE_IDENTITYDATA_USERS_PASSWORD)",
-      "Email": "$(SERVICE_IDENTITYDATA_USERS_EMAIL)",
-      "Roles": ["Administrator"],
-      "Claims": [
-        {
-          "Type": "name",
-          "Value": "admin"
-        }
-      ]
-    }
-  ],
-  "IdentityServerData:Clients": [
-    {
-      "ClientId": "$(SERVICE_ADMINCONFIGURATION_CLIENTID)",
-      "ClientName": "$(SERVICE_ADMINCONFIGURATION_CLIENTID)",
-      "ClientUri": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)",
-      "AllowedGrantTypes": ["authorization_code"],
-      "RequirePkce": true,
-      "ClientSecrets": [
-        {
-          "Value": "$(SERVICE_ADMINCONFIGURATION_CLIENTSECRET)"
-        }
-      ],
-      "RedirectUris": [
-        "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signin-oidc"
-      ],
-      "FrontChannelLogoutUri": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signout-oidc",
-      "PostLogoutRedirectUris": [
-        "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signout-callback-oidc"
-      ],
-      "AllowedCorsOrigins": ["$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)"],
-      "AllowedScopes": ["openid", "email", "profile", "roles"]
-    },
-    {
-      "ClientId": "microservices.identity_api_swaggerui",
-      "ClientName": "microservices.identity_api_swaggerui",
-      "AllowedGrantTypes": ["authorization_code"],
-      "RequireClientSecret": false,
-      "RequirePkce": true,
-      "RedirectUris": [
-        "$(COMMON_IDENTITY_SERVER_ADMIN_API_BASEURL)/swagger/oauth2-redirect.html"
-      ],
-      "AllowedScopes": ["microservices.identity_api"],
-      "AllowedCorsOrigins": ["$(COMMON_IDENTITY_SERVER_ADMIN_API_BASEURL)"]
-    }
-  ],
+  "IdentityData:Users:0:Username": "$(SERVICE_IDENTITYDATA_USERS_USERNAME)",
+  "IdentityData:Users:0:Password": "$(SERVICE_IDENTITYDATA_USERS_PASSWORD)",
+  "IdentityData:Users:0:Email": "$(SERVICE_IDENTITYDATA_USERS_EMAIL)",
+  "IdentityServerData:Clients:0:ClientId": "$(SERVICE_ADMINCONFIGURATION_CLIENTID)",
+  "IdentityServerData:Clients:0:ClientName": "$(SERVICE_ADMINCONFIGURATION_CLIENTID)",
+  "IdentityServerData:Clients:0:ClientUri": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)",
+  "IdentityServerData:Clients:0:ClientSecrets:0:Value": "$(SERVICE_ADMINCONFIGURATION_CLIENTSECRET)",
+  "IdentityServerData:Clients:0:RedirectUris:0": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signin-oidc",
+  "IdentityServerData:Clients:0:FrontChannelLogoutUri": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signout-oidc",
+  "IdentityServerData:Clients:0:PostLogoutRedirectUris:0": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/signout-callback-oidc",
+  "IdentityServerData:Clients:0:AllowedCorsOrigins:0": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)",
+  "IdentityServerData:Clients:1:RedirectUris:0": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)/swagger/oauth2-redirect.html",
+  "IdentityServerData:Clients:1:AllowedCorsOrigins:0": "$(COMMON_IDENTITY_SERVER_ADMIN_UI_BASEURL)",
   "Serilog:WriteTo:2:Args:ClientSecret": "$(SERVICE_CONNECTIONSTRINGS_DBCONTEXT)"
 }
