--- a/deployments/helms/identity-server-admin-api-chart/templates/service.yaml
+++ b/deployments/helms/identity-server-admin-api-chart/templates/service.yaml
@@ -6,10 +6,9 @@ metadata:
     {{- include "k8s-instance.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  {{- with .Values.service.ports }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   selector:
     {{- include "k8s-instance.selectorLabels" . | nindent 4 }}
