--- a/deployments/helms/overrides/identity-server-admin-ui-values.yaml
+++ b/deployments/helms/overrides/identity-server-admin-ui-values.yaml
@@ -33,6 +33,7 @@ securityContext:
 
 service:
   type: ClusterIP
+  port: 44303
   ports:
     - port: 5000
       targetPort: http
@@ -60,7 +61,6 @@ ingress:
     nginx.ingress.kubernetes.io/proxy-body-size: "8m"
     nginx.ingress.kubernetes.io/proxy-buffer-size: "1m"
     nginx.ingress.kubernetes.io/proxy-buffers-number: "12"
-    nginx.ingress.kubernetes.io/limit-rpm: "$(ingress-policy-rpm)"
     nginx.ingress.kubernetes.io/client-body-buffer-size: 1m
     nginx.ingress.kubernetes.io/affinity: "cookie"
   hosts:
