--- a/deployments/helms/overrides/identity-server-admin-api-values.yaml
+++ b/deployments/helms/overrides/identity-server-admin-api-values.yaml
@@ -32,6 +32,7 @@ securityContext:
   # runAsUser: 1000
 service:
   type: ClusterIP
+  port: 44302
   ports:
     - port: 5000
       targetPort: http
@@ -59,7 +60,6 @@ ingress:
     nginx.ingress.kubernetes.io/proxy-body-size: "8m"
     nginx.ingress.kubernetes.io/proxy-buffer-size: "1m"
     nginx.ingress.kubernetes.io/proxy-buffers-number: "12"
-    nginx.ingress.kubernetes.io/limit-rpm: "$(ingress-policy-rpm)"
     nginx.ingress.kubernetes.io/client-body-buffer-size: 1m
     nginx.ingress.kubernetes.io/affinity: "cookie"
   hosts:
