--- a/services/src/Doitsu.Technology.Ecommerce.Domain/Doitsu.Technology.Ecommerce.Domain.csproj
+++ b/services/src/Doitsu.Technology.Ecommerce.Domain/Doitsu.Technology.Ecommerce.Domain.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Domain</RootNamespace>
+        <RootNamespace>Doitsu.Technology.Ecommerce.Domain</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
