--- a/services/src/IdentityServer.Admin.EntityFramework.Shared/IdentityServer.Admin.EntityFramework.Shared.csproj
+++ b/services/src/IdentityServer.Admin.EntityFramework.Shared/IdentityServer.Admin.EntityFramework.Shared.csproj
@@ -13,7 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Domain\Domain.csproj" />
+	  <ProjectReference Include="..\Doitsu.Technology.Ecommerce.Domain\Doitsu.Technology.Ecommerce.Domain.csproj" />
 	</ItemGroup>
 </Project>
 
