--- a/deployments/helms/overrides/identity-server-sts-values.yaml
+++ b/deployments/helms/overrides/identity-server-sts-values.yaml
@@ -16,7 +16,8 @@ fullnameOverride: ""
 env:
   - name: ASPNETCORE_URLS
     value: http://+:5000;https://+:44310
-podAnnotations: {}
+podAnnotations: 
+  linkerd.io/inject: enabled
 
 podSecurityContext:
   {}
