--- a/deployments/helms/overrides/identity-server-sts-values.yaml
+++ b/deployments/helms/overrides/identity-server-sts-values.yaml
@@ -16,6 +16,8 @@ fullnameOverride: ""
 env:
   - name: ASPNETCORE_URLS
     value: http://+:5000;https://+:44310
+  - name: DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE
+    value: false 
 podAnnotations: 
   linkerd.io/inject: enabled
 
