--- a/application/customer-site/package.json
+++ b/application/customer-site/package.json
@@ -10,26 +10,29 @@
     "e2e": "ng e2e",
     "dev:ssr": "ng run multikart:serve-ssr",
     "serve:ssr": "node dist/multikart/server/main.js",
-    "build:ssr": "ng build --configuration production && ng run multikart:server:production",
+    "build:ssr": "ng build --prod && ng run multikart:server:production",
     "prerender": "ng run multikart:prerender",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.2",
-    "@angular/cdk": "^14.0.5",
-    "@angular/common": "^15.0.2",
-    "@angular/compiler": "^15.0.2",
-    "@angular/core": "^15.0.2",
-    "@angular/forms": "^15.0.2",
-    "@angular/localize": "^15.0.2",
-    "@angular/platform-browser": "^15.0.2",
-    "@angular/platform-browser-dynamic": "^15.0.2",
-    "@angular/router": "^15.0.2",
-    "@ks89/angular-modal-gallery": "^7.2.5",
-    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@angular-slider/ngx-slider": "^2.0.4",
+    "@angular/animations": "^16.0.4",
+    "@angular/cdk": "^15.0.0",
+    "@angular/common": "^16.0.4",
+    "@angular/compiler": "^16.0.4",
+    "@angular/core": "^16.0.4",
+    "@angular/forms": "^16.0.4",
+    "@angular/localize": "^16.0.4",
+    "@angular/platform-browser": "^16.0.4",
+    "@angular/platform-browser-dynamic": "^16.0.4",
+    "@angular/platform-server": "^16.0.5",
+    "@angular/router": "^16.0.4",
+    "@ks89/angular-modal-gallery": "^10.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "@ngneat/content-loader": "^7.0.0",
-    "@nguniversal/express-engine": "^15.2.1",
+    "@nguniversal/builders": "^16.0.2",
+    "@nguniversal/express-engine": "^16.0.2",
     "@ngx-loading-bar/core": "^6.0.2",
     "@ngx-loading-bar/http-client": "^6.0.2",
     "@ngx-loading-bar/router": "^6.0.2",
@@ -55,23 +58,23 @@
     "ng-lazyload-image": "^9.1.3",
     "ng5-slider": "^1.2.4",
     "ngx-bar-rating": "^3.0.0",
-    "ngx-infinite-scroll": "^15.0.0",
+    "ngx-infinite-scroll": "^16.0.0",
     "ngx-masonry": "^13.0.0",
-    "ngx-owl-carousel-o": "^15.0.0",
+    "ngx-owl-carousel-o": "^16.0.0",
     "ngx-skeleton-loader": "^5.0.0",
+    "ngx-slider-v2": "^16.0.1",
     "ngx-toastr": "^14.3.0",
     "path": "^0.12.7",
     "rxjs": "~7.5.5",
     "sass": "^1.52.1",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.5"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.2",
-    "@angular/cli": "^15.0.2",
-    "@angular/compiler-cli": "^15.0.2",
-    "@angular/language-service": "^15.0.2",
-    "@nguniversal/builders": "^15.0.2",
+    "@angular-devkit/build-angular": "^16.0.5",
+    "@angular/cli": "^16.0.5",
+    "@angular/compiler-cli": "^16.0.4",
+    "@angular/language-service": "^16.0.4",
     "@types/express": "^4.17.13",
     "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~4.0.3",
@@ -79,9 +82,6 @@
     "@types/mousetrap": "^1.6.9",
     "@types/node": "^17.0.35",
     "codelyzer": "^6.0.2",
-    "eslint": "~*.0.0",
-    "eslint-plugin-import": "~2.21.2",
-    "eslint-plugin-prettier": "~4.2.0",
     "jasmine-core": "~4.1.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.20",
@@ -89,10 +89,9 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "prettier": "^2.8.8",
     "protractor": "~7.0.0",
     "ts-node": "~10.8.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.8.4"
+    "typescript": "~5.0.4"
   }
 }
