--- a/deployments/helms/identity-server-admin-ui-chart/templates/service.yaml
+++ b/deployments/helms/identity-server-admin-ui-chart/templates/service.yaml
@@ -1,6 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
+  {{- with .Values.serviceAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 2 }}
+  {{- end }}
   name: {{ include "k8s-instance.fullname" . }}
   labels:
     {{- include "k8s-instance.labels" . | nindent 4 }}
