--- a/deployments/helms/overrides/identity-server-admin-ui-values.yaml
+++ b/deployments/helms/overrides/identity-server-admin-ui-values.yaml
@@ -20,6 +20,8 @@ env:
     value: "false"
 podAnnotations:
   linkerd.io/inject: enabled
+serviceAnnotations:
+  linkerd.io/inject: enabled
 
 podSecurityContext:
   {}
