--- a/deployments/helms/identity-server-admin-ui-chart/templates/service.yaml
+++ b/deployments/helms/identity-server-admin-ui-chart/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   {{- with .Values.serviceAnnotations }}
   annotations:
-    {{- toYaml . | nindent 2 }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
   name: {{ include "k8s-instance.fullname" . }}
   labels:
@@ -16,3 +16,10 @@ spec:
   {{- end }}
   selector:
     {{- include "k8s-instance.selectorLabels" . | nindent 4 }}
+  metadata:
+    {{- with .Values.serviceAnnotations }}
+    annotations:
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
+    labels:
+    {{- include "k8s-instance.labels" . | nindent 4 }}
