--- a/services/product-service/product-infrastructure/Cargo.toml
+++ b/services/product-service/product-infrastructure/Cargo.toml
@@ -10,3 +10,5 @@ serde_json = "1.0.105"
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 chrono = { version = "0.4.30", features = ["serde"] }
 product-domain = { path = "../product-domain", version = "0.1.0" }
+diesel = { version = "2.1.1", features = ["postgres", "chrono", "uuid"] }
+diesel_migrations = "2.1.0"
