--- a/services/blog_service/blog_infrastructure/Cargo.toml
+++ b/services/blog_service/blog_infrastructure/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "blog-infrastructure"
+name = "blog_infrastructure"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# See more keys and their definitions at https://doc.rust_lang.org/cargo/reference/manifest.html
 [dependencies]
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 chrono = { version = "0.4.30", features = ["serde"] }
-blog-domain = { path = "../blog-domain", version = "0.1.0" }
+blog_domain = { path = "../blog_domain", version = "0.1.0" }
 diesel = { version = "2.1.1", features = ["postgres", "chrono", "uuid"] }
 diesel_migrations = "2.1.0"
