--- a/services/cms-headless/package.json
+++ b/services/cms-headless/package.json
@@ -11,9 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.13.7",
-    "@strapi/plugin-users-permissions": "4.13.7",
     "@strapi/plugin-i18n": "4.13.7",
+    "@strapi/plugin-users-permissions": "4.13.7",
+    "@strapi/strapi": "4.13.7",
+    "patch-package": "^8.0.0",
     "pg": "8.8.0"
   },
   "author": {
