--- a/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
+++ b/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "OrchardCore": {
+    "OrchardCore_Shells_Database": {
+      "DatabaseProvider": "SqlConnection",
+      "ConnectionString": "",
+      "TablePrefix": "",
+      "MigrateFromFiles": true
+    }
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Warning",
