--- a/services/cms-headless/src/Microservices.Cms.WebApp/Microservices.Cms.WebApp.csproj
+++ b/services/cms-headless/src/Microservices.Cms.WebApp/Microservices.Cms.WebApp.csproj
@@ -5,6 +5,7 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>515ea6e6-253c-44fb-889e-672ab4184373</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,11 +20,19 @@
 
   <ItemGroup>
     <PackageReference Include="OrchardCore.Apis.GraphQL" Version="1.7.0" />
+    <PackageReference Include="OrchardCore.Commerce" Version="1.3.0" />
+    <PackageReference Include="OrchardCore.Commerce.AddressDataType" Version="1.3.0" />
+    <PackageReference Include="OrchardCore.Commerce.ContentFields" Version="1.3.0" />
+    <PackageReference Include="OrchardCore.Commerce.Inventory" Version="1.3.0" />
+    <PackageReference Include="OrchardCore.Commerce.MoneyDataType" Version="1.3.0" />
+    <PackageReference Include="OrchardCore.Commerce.Promotion" Version="1.3.0" />
+    <PackageReference Include="OrchardCore.Commerce.Tax" Version="1.3.0" />
     <PackageReference Include="OrchardCore.Logging.Serilog" Version="1.7.0" />
     <PackageReference Include="OrchardCore.Application.Cms.Targets" Version="1.7.0" />
     <PackageReference Include="OrchardCore.OpenId" Version="1.7.0" />
     <PackageReference Include="OrchardCore.Seo" Version="1.7.0" />
     <PackageReference Include="OrchardCore.Seo.Abstractions" Version="1.7.0" />
+    <PackageReference Include="OrchardCore.Workflows" Version="1.7.0" />
   </ItemGroup>
 
 </Project>
