--- a/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
+++ b/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
@@ -5,6 +5,30 @@
       "ConnectionString": "",
       "TablePrefix": "",
       "MigrateFromFiles": true
+    },
+    "OrchardCore_Redis": {
+      "Configuration": "redis://:aaa@localhost:6379,abortConnect=false,allowAdmin=true"
+    },
+    "OrchardCore_AutoSetup": {
+      "AutoSetupPath": "",
+      "LockOptions": {
+        "LockTimeout": "10000",
+        "LockExpiration": "10000"
+      },
+      "Tenants": [
+        {
+          "ShellName": "Default",
+          "SiteName": "Doitsu Technology",
+          "SiteTimeZone": "Asia/Bangkok",
+          "AdminUsername": "admin",
+          "AdminEmail": "admin@dtech.com",
+          "AdminPassword": "",
+          "DatabaseProvider": "SqlConnection",
+          "DatabaseConnectionString": "",
+          "DatabaseTablePrefix": "",
+          "RecipeName": "SaaS"
+        }
+      ]
     }
   },
   "Serilog": {
