--- a/services/cms-headless/src/Microservices.Cms.WebApp/Microservices.Cms.WebApp.csproj
+++ b/services/cms-headless/src/Microservices.Cms.WebApp/Microservices.Cms.WebApp.csproj
@@ -38,6 +38,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DTech.Cms.Abstractions\DTech.Cms.Abstractions.csproj" />
+      <ProjectReference Include="..\DTech.Cms.AdminTheme\DTech.Cms.AdminTheme.csproj" />
+      <ProjectReference Include="..\DTech.Cms.Core.Module\DTech.Cms.Core.Module.csproj" />
       <ProjectReference Include="..\DTech.Cms.Theme\DTech.Cms.Theme.csproj" />
     </ItemGroup>
 </Project>
