--- a/services/cms-headless/src/DTech.Cms.Core.Module/DTech.Cms.Core.Module.csproj
+++ b/services/cms-headless/src/DTech.Cms.Core.Module/DTech.Cms.Core.Module.csproj
@@ -1,29 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net7.0</TargetFramework>
+        <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="OrchardCore.Module.Targets" Version="1.7.0" />
-    <PackageReference Include="OrchardCore.ContentManagement" Version="1.7.0" />
-    <PackageReference Include="OrchardCore.ContentTypes.Abstractions" Version="1.7.0" />
-    <PackageReference Include="OrchardCore.DisplayManagement" Version="1.7.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="OrchardCore.Module.Targets" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.ContentManagement" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.ContentTypes.Abstractions" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.DisplayManagement" Version="1.7.0"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\DTech.Cms.Abstractions\DTech.Cms.Abstractions.csproj" />
-
-  </ItemGroup>
-
-
-
+    <ItemGroup>
+        <ProjectReference Include="..\DTech.Cms.Abstractions\DTech.Cms.Abstractions.csproj"/>
+        <ProjectReference Include="..\DTech.Cms.AdminTheme\DTech.Cms.AdminTheme.csproj"/>
+        <ProjectReference Include="..\DTech.Cms.SiteTheme\DTech.Cms.SiteTheme.csproj" />
+    </ItemGroup>
 
 </Project>
