--- a/services/cms-headless/src/DTech.Cms.SiteTheme/DTech.Cms.SiteTheme.csproj
+++ b/services/cms-headless/src/DTech.Cms.SiteTheme/DTech.Cms.SiteTheme.csproj
@@ -12,11 +12,13 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="OrchardCore.Menu" Version="1.7.0" />
         <PackageReference Include="OrchardCore.Theme.Targets" Version="1.7.0"/>
         <PackageReference Include="OrchardCore.ContentManagement" Version="1.7.0"/>
         <PackageReference Include="OrchardCore.DisplayManagement" Version="1.7.0"/>
         <PackageReference Include="OrchardCore.ResourceManagement" Version="1.7.0"/>
         <PackageReference Include="OrchardCore.Themes" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.Users" Version="1.7.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -24,8 +26,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="Views\Layout.cshtml"/>
-        <Content Include="Views\_ViewImports.cshtml"/>
+      <Content Include="Views\_ViewImports.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\" />
     </ItemGroup>
 
 </Project>
