--- a/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
+++ b/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
@@ -29,6 +29,18 @@
           "RecipeName": "SaaS"
         }
       ]
+    },
+    "OrchardCore_Google": {
+      "ClientID": "",
+      "ClientSecret": "",
+      "CallbackPath": "/signin-google",
+      "SaveTokens": false
+    },
+    "OrchardCore_GitHub": {
+      "ClientID": "",
+      "ClientSecret": "",
+      "CallbackPath": "/signin-github",
+      "SaveTokens": false
     }
   },
   "Serilog": {
