--- a/services/cms-headless/src/DTech.Cms.Core.Module/DTech.Cms.Core.Module.csproj
+++ b/services/cms-headless/src/DTech.Cms.Core.Module/DTech.Cms.Core.Module.csproj
@@ -12,16 +12,37 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="OrchardCore.GitHub" Version="1.7.0" />
+        <PackageReference Include="OrchardCore.Google" Version="1.7.0" />
         <PackageReference Include="OrchardCore.Module.Targets" Version="1.7.0"/>
         <PackageReference Include="OrchardCore.ContentManagement" Version="1.7.0"/>
         <PackageReference Include="OrchardCore.ContentTypes.Abstractions" Version="1.7.0"/>
         <PackageReference Include="OrchardCore.DisplayManagement" Version="1.7.0"/>
+
+        <PackageReference Include="OrchardCore.Commerce" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.AddressDataType" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.ContentFields" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.Inventory" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.MoneyDataType" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.Promotion" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.Tax" Version="1.3.0"/>
+
+        <PackageReference Include="OrchardCore.Apis.GraphQL" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.Seo" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.Seo.Abstractions" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.Workflows" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.Recipes" Version="1.7.0"/>
+
+        <PackageReference Include="OrchardCore.OpenId" Version="1.7.0"/>
+
+        <PackageReference Include="OrchardCore.Themes" Version="1.7.0"/>
+        <PackageReference Include="OrchardCore.Users.Core" Version="1.7.0"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\DTech.Cms.Abstractions\DTech.Cms.Abstractions.csproj"/>
         <ProjectReference Include="..\DTech.Cms.AdminTheme\DTech.Cms.AdminTheme.csproj"/>
-        <ProjectReference Include="..\DTech.Cms.SiteTheme\DTech.Cms.SiteTheme.csproj" />
+        <ProjectReference Include="..\DTech.Cms.SiteTheme\DTech.Cms.SiteTheme.csproj"/>
     </ItemGroup>
 
 </Project>
