--- a/services/cms-headless/deployment/appsettings.secret.json
+++ b/services/cms-headless/deployment/appsettings.secret.json
@@ -6,5 +6,8 @@
   "OrchardCore:OrchardCore_AutoSetup:Tenants:0:AdminPassword": "{{}}",
   "OrchardCore:OrchardCore_AutoSetup:Tenants:0:DatabaseConnectionString": "{{}}",
   "OrchardCore:OrchardCore_AutoSetup:Tenants:0:DatabaseTablePrefix": "Tenants_DTech",
+  "OrchardCore:OrchardCore_AutoSetup:Tenants:1:AdminPassword": "{{}}",
+  "OrchardCore:OrchardCore_AutoSetup:Tenants:1:DatabaseConnectionString": "{{}}",
+  "OrchardCore:OrchardCore_AutoSetup:Tenants:1:DatabaseTablePrefix": "Tenants_DTech_Headless",
   "OrchardCore:OrchardCore.Redis:Configuration": "{{}}"
 }
