--- a/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
+++ b/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
@@ -27,6 +27,20 @@
           "DatabaseConnectionString": "",
           "DatabaseTablePrefix": "",
           "RecipeName": "SaaS"
+        },
+        {
+          "ShellName": "Tenants_Headless",
+          "SiteName": "Doitsu Technology | Headless CMS",
+          "SiteTimeZone": "Asia/Bangkok",
+          "AdminUsername": "admin",
+          "AdminEmail": "admin@dtech.com",
+          "AdminPassword": "",
+          "DatabaseProvider": "SqlConnection",
+          "DatabaseConnectionString": "",
+          "DatabaseTablePrefix": "",
+          "RecipeName": "DTech.Cms.Core.Module.Setup",
+          "RequestUrlHost": "",
+          "RequestUrlPrefix": "headless"
         }
       ]
     },
