--- a/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
+++ b/services/cms-headless/src/Microservices.Cms.WebApp/appsettings.json
@@ -26,7 +26,7 @@
           "DatabaseProvider": "SqlConnection",
           "DatabaseConnectionString": "",
           "DatabaseTablePrefix": "",
-          "RecipeName": "SaaS"
+          "RecipeName": "DTech.Cms.SaaS.Module.Setup"
         },
         {
           "ShellName": "Tenants_Headless",
