--- a/services/cms-headless/src/DTech.Cms.Core.Module/DTech.Cms.Core.Module.csproj
+++ b/services/cms-headless/src/DTech.Cms.Core.Module/DTech.Cms.Core.Module.csproj
@@ -45,4 +45,13 @@
         <ProjectReference Include="..\DTech.Cms.SiteTheme\DTech.Cms.SiteTheme.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Update="Recipes\DTech.Cms.Core.Commerce.Module.Setup.recipe.json">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Recipes\DTech.Cms.SaaS.Module.Setup.recipe.json">
+        <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      </EmbeddedResource>
+    </ItemGroup>
+
 </Project>
