--- a/services/cms-headless/src/Microservices.Cms.WebApp/Microservices.Cms.WebApp.csproj
+++ b/services/cms-headless/src/Microservices.Cms.WebApp/Microservices.Cms.WebApp.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Folder Include="Recipes\" />
         <Folder Include="wwwroot\"/>
         <Folder Include="Localization\"/>
     </ItemGroup>
@@ -21,19 +22,22 @@
     <ItemGroup>
         <PackageReference Include="OrchardCore.Application.Cms.Targets" Version="1.7.0"/>
         <PackageReference Include="OrchardCore.Logging.Serilog" Version="1.7.0"/>
-        
-<!--        <PackageReference Include="OrchardCore.Commerce" Version="1.3.0"/>-->
-<!--        <PackageReference Include="OrchardCore.Commerce.AddressDataType" Version="1.3.0"/>-->
-<!--        <PackageReference Include="OrchardCore.Commerce.ContentFields" Version="1.3.0"/>-->
-<!--        <PackageReference Include="OrchardCore.Commerce.Inventory" Version="1.3.0"/>-->
-<!--        <PackageReference Include="OrchardCore.Commerce.MoneyDataType" Version="1.3.0"/>-->
-<!--        <PackageReference Include="OrchardCore.Commerce.Promotion" Version="1.3.0"/>-->
-<!--        <PackageReference Include="OrchardCore.Commerce.Tax" Version="1.3.0"/>-->
+
+        <PackageReference Include="OrchardCore.Commerce" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.AddressDataType" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.ContentFields" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.Inventory" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.MoneyDataType" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.Promotion" Version="1.3.0"/>
+        <PackageReference Include="OrchardCore.Commerce.Tax" Version="1.3.0"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\DTech.Cms.Abstractions\DTech.Cms.Abstractions.csproj"/>
-        <ProjectReference Include="..\DTech.Cms.Commerce.Module\DTech.Cms.Commerce.Module.csproj" />
         <ProjectReference Include="..\DTech.Cms.Core.Module\DTech.Cms.Core.Module.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Recipes\Commerce.recipe.json" />
     </ItemGroup>
 </Project>
