--- a/application/doitsu_technology_website/dtech_csr/bonnie.toml
+++ b/application/doitsu_technology_website/dtech_csr/bonnie.toml
@@ -1,26 +1,10 @@
 version = "0.3.2"
 
 [scripts]
-## Builds Tailwind CSS for development (no purging)
-build-tailwind-dev = [
-    "tailwindcss -c ./tailwind.config.js -o ./tailwind.css"
-]
-## Builds Tailwind CSS for production (maximum purging and minification)
-build-tailwind-prod = [
-    "NODE_ENV=production tailwindcss -c ./tailwind.config.js -o ./tailwind.css --minify"
-]
-## Builds Tailwind CSS for development (no purging)
-watch-tailwind-dev = [
-    "tailwindcss -c ./tailwind.config.js -o ./tailwind.css --watch"
+build = [
+    "trunk build"
 ]
 
-## Builds Tailwind CSS for development usage
-setup.subcommands.tailwind = [
-    "bonnie build-tailwind-dev"
+run = [
+    "trunk serve"
 ]
-setup.subcommands.prompt_tailwind = "echo \"Have you installed the Tailwind CLI globally with 'npm i -g tailwindcss' or 'yarn global add tailwindcss'?\""
-setup.order = """
-tailwind {
-    Failure => prompt_tailwind 
-}
-"""
