--- a/application/doitsu_technology_website/Cargo.toml
+++ b/application/doitsu_technology_website/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+web-sys = { version = "0.3.65" }
 lipsum = "0.9.0"
 log = "0.4.20"
 rand = { version = "0.8.5", features = ["small_rng"] }
@@ -12,11 +13,10 @@ yew = { version = "0.21.0" }
 yew-router = { version = "0.18.0" }
 serde = { version = "1.0.190", features = ["derive"] }
 gloo = "0.10.0"
-wasm-logger = "0.2.0"
 instant = { version = "0.1.12", features = ["wasm-bindgen"] }
 once_cell = "1.18.0"
-wasm-bindgen = "0.2.88"
-web-sys = { version = "0.3.65" }
+wasm-bindgen = "0.2.89"
+wasm-logger = "0.2.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
@@ -24,3 +24,7 @@ getrandom = { version = "0.2", features = ["js"] }
 [[bin]]
 name = "dtech_csr"
 required-features = ["yew/csr"]
+
+[[bin]]
+name = "dtech_hydrate"
+required-features = ["hydration"]
